After CMF 1.4.8

  Bug Fixes

    - DCWorkflow Guard check now uses utils._checkPermission instead of Zope's
      checkPermission (allows using proxy roles)

    - Added check for executable owner and proxy roles to _checkPermission

    - Put the DiscussionItem in its container before indexing it.

    - CMFCore.utils: The return value from _mergedLocalRoles allowed
      direct manipulation of objects' local role settings since it
      contained references to the actual values instead of copies.
      (http://www.zope.org/Collectors/CMF/376)

    - CMFDefault.Image and CMFDefault.File: When calling the constructor,
      any intelligent content type detection would be destroyed by the
      call to initialize Dublin Core values, which would overwrite the
      content_type. It is now preserved, if possible.
      (http://www.zope.org/Collectors/CMF/370)

    - CMFCore.FSImage and FSFile: Unlike the current behavior of Zope
      itself, FSImage and FSFile would set a content-length response
      header for 304 (not modified) responses, which should not be
      done according to RFC 2616. It won't do so anymore, but Zope
      itself will still force a content-length header in
      ZServer.HTTPResponse. This misbehavior has been filed as a Zope
      issue (http://www.zope.org/Collectors/Zope/1866).
      (http://www.zope.org/Collectors/CMF/372)

    - CMFCore.PortalContent, CMFCore.FSSTXMethod, CMFTopic.Topic,
      CMFDefault.SkinnedFolder: Cache headers from the Caching Policy
      Manager never got set for DTML-based skins due to the way the
      view template __call__ method was
      invoked. (http://www.zope.org/Collectors/CMF/374)

    - Make CookieCrumbler set a 'Cache-Control' header, default to
      'private' when a autentication cookie is present.

    - Be verbose about what caching policy manager set headers by
      including a 'X-Cache-Headers-Set-By' header.

    - Added 'Vary' setting to Caching Policy Manager.
